app/kubernetes/kube-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j-db-importer-deployment
  namespace: pet-via-adv-da-ba23
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j-db-importer
  template:
    metadata:
      labels:
        app: neo4j-db-importer
    spec:
      containers:
        - name: app
          image: ghcr.io/mse-advdaba/neo4j-db-importer:latest
          imagePullPolicy: Always
          # limit the memory usage of the app container to 4GB
          resources:
            limits:
              memory: "4Gi"
          volumeMounts:
            - mountPath: /json
              name: db-pvc
        - name: db
          image: neo4j:5.12.0-community
          imagePullPolicy: Always
          ports:
            - containerPort: 7474
              name: http
              protocol: TCP
            - containerPort: 7687
              name: bolt
              protocol: TCP
          volumeMounts:
            - mountPath: /json
              name: db-pvc
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web-db-service
  namespace: pet-via-adv-da-ba23
spec:
  ports:
    - name: http
      port: 80
      targetPort: 7474
  selector:
    app: neo4j-db-importer
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: pet-via-adv-da-ba23
spec:
  ports:
    - name: bolt
      port: 80
      targetPort: 7687
  selector:
    app: neo4j-db-importer
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace: pet-via-adv-da-ba23
spec:
  rules:
    - host: neo4j-db-importer.kube.isc.heia-fr.ch
      http:
        paths:
          - backend:
              service:
                name: web-db-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: database-neo4j-db-importer.kube.isc.heia-fr.ch
      http:
        paths:
          - backend:
              service:
                name: db-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - database-neo4j-db-importer.kube.isc.heia-fr.ch
